name:                fs4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fs4#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs: src
                , .
  exposed-modules: Foundation
                   Dispatch
                   Handler.Home
                   Handler.Preview
  build-depends:   base >= 4.7 && < 5
                ,  yesod
                ,  data-default
                ,  text
                ,  stm 
                ,  bytestring
                ,  conduit
                ,  conduit-extra
                ,  resourcet
                ,  blaze-markup
                ,  shakespeare 
                

executable fs4
  hs-source-dirs:      src
                  ,    .
  other-modules:       Foundation
                       Dispatch
                       Handler.Home
                       Handler.Preview
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  yesod
                    ,  data-default
                    ,  text
                    ,  stm
                    ,  bytestring
                    ,  conduit
                    ,  conduit-extra
                    ,  resourcet
                    ,  blaze-markup
                    ,  shakespeare 